# alphafold3-onnx

./: .gitignore  README.md  __init__.py  convert_to_openvino.py  pipeline.sh  pyproject.toml  run-test.py  run.py  startDiffusion.py  startWorker.py  tc_malloc_compile.sh  torch_export.sh  vino_env.sh
confidenceWorker/: confidence.py  confidenceVino.py
confidenceWorker/misc/: feat_batch.py  features.py  params.py  protein_data_processing.py  scoring.py
confidenceWorker/network/: atom_layout.py  attention.py  diffusion_head.py  diffusion_transformer.py  dot_product_attention.py  head.py  modules.py  pairformer.py
diffusionWorker/: alphafold3.py  diffusionOne.py
diffusionWorker/misc/: params.py
diffusionWorker/network/: atom_cross_attention.py  atom_layout.py  diffusion_head.py  diffusion_transformer.py  dot_product_attention.py  featurization.py  gated_linear_unit.py  layer_norm.py  utils.py
diffusionWorker2/: diffusionOne.py  diffusion_step_vino.py  version.py
diffusionWorker2/misc/: params.py
diffusionWorker2/network/: atom_cross_attention.py  atom_layout.py  diffusion_head.py  diffusion_transformer.py  dot_product_attention.py  featurization.py  gated_linear_unit.py  utils.py
diffusionWorker2/premodel/: pre_ac_encoder.py  pre_diffusion.py  (+1 more)
evoWorker/: config.py  evoformerWorker.py
evoformer/: config.py  evoformer.py  evoformerOne.py  preprocess.py
fourier_embeddings/: bias.npy  fourier_embeddings.py  weight.npy
target_feat/: TargetFeat.py
torchWorker/: alphafold3.py  config.py
torchfold3/: .gitignore  alphafold3.py  config.py
(+60 files in other folders)
